--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,36 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media (max-width: 600px){
+
+/* Nav */
+    nav a{
+        color:black;
+        margin: 0 25px;
+    }
+    nav span{
+        border:1px solid #626262;
+    }
+/* Gallery */
+    .artists-container{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width:80%;
+        margin:0 auto;
+    }
+
+    .artist{
+        width:80%;
+        text-align:center;
+        margin: 0 auto;
+    }
+    .artist img{
+        width:100%;
+        margin: 20px 0;
+    }
+
+
+}
+
